重构订阅管理逻辑，统一接口定义，优化代码结构并移除冗余实现